--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">LifeHub</string>
+
+    <!-- Log in -->
+    <string name="login">Log in</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot password</string>
+    <string name="not_a_member">Not a member?</string>
+    <string name="email_error">Email format is not correct or email field is empty.</string>
+    <string name="password_error">Invalid password; Password word should be at least 8 characters long.</string>
+    <string name="login_error">Something went wrong when trying to log in, Please try again.</string>
+
+    <!-- Sign up -->
+    <string name="sign_up">Sign up</string>
+
 </resources>
