--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,15 @@
     <string name="resend">Resend</string>
     <string name="email_verification_error">Failed to send email verification. Please try again.</string>
 
+    <!-- Password Reset -->
+    <string name="password_reset">Reset password</string>
+    <string name="password_reset_body">Please provide an email associated with your account and a password reset form will be emailed to you.</string>
+    <string name="password_reset_error">Something went wrong when trying to send reset email, Please try again.</string>
+    <string name="password_reset_success">Password reset successfully</string>
+    <string name="password_reset_success_body">Please log in with you new password</string>
+    <string name="back_to_login">Back to login</string>
+    <string name="send_reset_email">Send reset email</string>
+
+
 
 </resources>
