--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="generic_error">Something went wrong</string>
     <string name="choose_email_app">Choose Email App</string>
     <string name="no_email_app">No email app found.</string>
+    <string name="date_format_place_holder">MM/DD/YYYY</string>
+    <string name="selected_date">Select date</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">OK</string>
+    <string name="dob_future_error">Birthday cannot be in the future.</string>
+    <string name="dob_under_18">You must be at least 18 years old.</string>
 </resources>
