--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,11 @@
     <string name="quote_author">- %s</string>
     <string name="welcome_back">Welcome back,</string>
 
+    <!-- Profile -->
+    <string name="profile_background_picture">Profile background picture</string>
+    <string name="profile_picture">Profile picture</string>
+    <string name="member_since">Member since %s</string>
+    <string name="change_email">Change email</string>
+    <string name="delete_account">Delete account</string>
+
 </resources>
