--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,5 +80,9 @@
     <string name="member_since">Member since %s</string>
     <string name="change_email">Change email</string>
     <string name="delete_account">Delete account</string>
+    <string name="profile_picture_change">Choose how you want to set your picture</string>
+    <string name="open_gallery">Choose photo from gallery</string>
+    <string name="take_a_photo">Take a picture</string>
+    <string name="close">Close</string>
 
 </resources>
