--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,6 @@
     <string name="open_gallery">Choose photo from gallery</string>
     <string name="take_a_photo">Take a picture</string>
     <string name="close">Close</string>
+    <string name="account_options">Account Options</string>
 
 </resources>
