--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,7 @@
     <string name="quote">“%s”</string>
     <string name="quote_author">- %s</string>
     <string name="welcome_back">Welcome back,</string>
+    <string name="life_hub">– LifeHub</string>
 
     <!-- Profile -->
     <string name="profile_background_picture">Profile background picture</string>
