implement mood tracker streak

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,8 @@
     <string name="mood_modal_title">"This Week's Moods"</string>
     <string name="no_entries">"No entries yet."</string>
     <string name="entry_saved">"Mood saved successfully. Swipe right to see the last 7 entries."</string>
+    <string name="streak">You have started a mood streak! Record how you are feeling everyday to keep this streak going</string>
+    <string name="streak_subtitle">day mood recording streak</string>
 
     <!-- Profile -->
     <string name="profile_background_picture">Profile background picture</string>
