implement to do list screen

--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="ok">OK</string>
     <string name="dob_future_error">Birthday cannot be in the future.</string>
     <string name="dob_under_18">You must be at least 18 years old.</string>
+    <string name="drag">Drag</string>
 </resources>
