--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,8 +129,10 @@
     <string name="reflection_subTitle">Pause and explore your thoughts in a guided way</string>
 
     <!-- TODO_list -->
-    <string name="todo_screen_title">Provide a date(optional)</string>
+    <string name="todo_screen_title">Provide a date (required)</string>
     <string name="todo_screen_subtitle">Create a to do list for the day</string>
-
+    <string name="todo_date">Pick a date for the todo list</string>
+    <string name="complete">Complete</string>
+    <string name="incomplete">Incomplete</string>
 
 </resources>
